# python-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml
src/my_package/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
