# ============================================================================
# pyproject.toml — hatchling + hatch-vcs + uv
# ============================================================================
# Version is derived entirely from git tags:
#   - On tag v1.2.3    → "1.2.3"
#   - On tag v1.2.3rc1 → "1.2.3rc1"
#   - 5 commits past v1.2.3 on a feature branch → "1.2.4.dev5+gabcdef1"
# ============================================================================

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "my-package"
dynamic = ["version"]
description = "A short description of your package"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
keywords = ["sample", "template"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",       # example: CLI framework
    "httpx>=0.27",      # example: HTTP client
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

# CLI entry point — installs `my-package` command
[project.scripts]
my-package = "my_package.cli:main"

[project.urls]
Homepage = "https://github.com/yourname/my-package"
Documentation = "https://github.com/yourname/my-package#readme"
Repository = "https://github.com/yourname/my-package"
Issues = "https://github.com/yourname/my-package/issues"
Changelog = "https://github.com/yourname/my-package/releases"

# ── Hatch: git-based versioning ────────────────────────────────────────────
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
tag_regex = "^v(?P<version>[vV]?\\d+(?:\\.\\d+)*(?:[._-]?\\w+)*)$"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.hatch.build.hooks.vcs]
version-file = "src/my_package/_version.py"

# ── Hatch: build targets ───────────────────────────────────────────────────
[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.hatch.build.targets.wheel]
packages = ["src/my_package"]

# ── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["my_package"]

# ── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",          # show summary of all non-passing tests
    "--strict-markers",
    "--tb=short",
]

# ── Coverage ────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["my_package"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80

# ── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
